--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prepare:linux": "yarn prepare && chmod ug+x .husky/*"
   },
   "devDependencies": {
+    "@faker-js/faker": "^6.3.1",
     "@types/jest": "^27.5.0",
     "@types/node": "^17.0.31",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
