--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "prettier": "^2.6.2",
     "ts-jest": "^28.0.1",
     "typescript": "^4.6.4"
+  },
+  "dependencies": {
+    "axios": "^0.27.2"
   }
 }
