--- a/package.json
+++ b/package.json
@@ -37,7 +37,10 @@
     "lint-staged": "^12.4.1",
     "prettier": "^2.6.2",
     "ts-jest": "^28.0.1",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.9.0"
   },
   "dependencies": {
     "axios": "^0.27.2",
